Add custom widget theme with color picker
This commit introduces a new "Custom" theme option for the widget,
allowing users to select a custom background color.

Changes include:
- Added "Custom" theme to widget_themes array in arrays.xml.
- Introduced new string resources for custom theme color in strings.xml.
- Modified preferences_widget.xml to include a color picker preference
for the custom theme.
- Updated WidgetSettings.kt to manage the visibility and functionality
of the custom color picker based on theme selection.
- Extended WidgetPreferences.kt to store and retrieve the custom theme
color, and to apply it to the widget's background.
- Implemented a isLight utility function in Theme.kt to determine text
color based on the custom background color.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -386,11 +386,14 @@ File %1$s contained %2$s.\n\n
   <string name="launcher_icon">Launcher icon</string>
   <string name="theme_black">Black</string>
   <string name="theme_light">Light</string>
+  <string name="theme_custom">Custom</string>
   <string name="theme_dark">Dark</string>
   <string name="theme_wallpaper">Wallpaper</string>
   <string name="theme_day_night">Day/Night</string>
   <string name="theme_system_default">System default</string>
   <string name="theme_dynamic">Dynamic</string>
+  <string name="p_widget_custom_theme_color" translatable="false">p_widget_custom_theme_color</string>
+  <string name="custom_theme_color">Custom theme color</string>
   <string name="language">Language</string>
   <string name="restart_required">Restart Tasks for this change to take effect</string>
   <string name="restart_now">Restart now</string>
