--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -727,4 +727,9 @@ File %1$s contained %2$s.\n\n
   <string name="sync_warning_google_tasks">Not all task details sync with Google Tasks</string>
   <string name="button_learn_more">Learn more</string>
   <string name="widget_view_more_tasks">View more tasks</string>
+  <string name="reschedule_overdue_tasks">Reschedule overdue tasks</string>
+  <string name="reschedule_todays_tasks">Reschedule today\'s tasks</string>
+  <string name="reschedule_done">Done</string>
+  <string name="reschedule_skip">Skip</string>
+  <string name="reschedule_all_tasks_done">All tasks rescheduled!</string>
 </resources>
