--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -721,7 +721,7 @@
     <string name="add_shortcut_to_home_screen">Aggiungi collegamento sulla Home</string>
     <string name="add_widget_to_home_screen">Aggiungi widget sulla Home</string>
     <string name="comment">Commento</string>
-    <string name="cost_free">Costo: gratuito</string>
+    <string name="cost_free">Gratuito</string>
     <string name="multiline_title">Consenti titoli su più righe</string>
     <string name="multiline_title_on">Premi il tasto Invio per andare a capo</string>
     <string name="cost_more_money">Costo: $$$</string>
