--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -718,7 +718,7 @@
     <string name="delete_comment">comentariu</string>
     <string name="comment">Comentariu</string>
     <string name="quiet_hours_in_effect">Orele liniștite sunt activate</string>
-    <string name="cost_free">Preț: Gratuit</string>
+    <string name="cost_free">Gratuit</string>
     <string name="price_per_month_with_currency">%s/lună</string>
     <string name="price_per_year_with_currency">%s/an</string>
     <string name="add_widget_to_home_screen">Adaugă widget pe ecranul de pornire</string>
