--- a/app/src/main/res/values-bg-rBG/strings.xml
+++ b/app/src/main/res/values-bg-rBG/strings.xml
@@ -702,7 +702,7 @@
     <string name="multiline_title">Многоредови заглавия</string>
     <string name="cost_more_money">Цена: $$$</string>
     <string name="cost_money">Цена: $</string>
-    <string name="cost_free">Цена: безплатно</string>
+    <string name="cost_free">Безплатно</string>
     <string name="multiline_title_on">Натиснете Enter, за да въведете нови редове</string>
     <string name="sync_warning_google_tasks_title">Относно синхронизацията с Google Task</string>
     <string name="button_learn_more">Научете повече</string>
