--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -700,7 +700,7 @@
     <string name="add_shortcut_to_home_screen">Verknüpfung zum Startbildschirm hinzufügen</string>
     <string name="cost_more_money">Kosten: €€€</string>
     <string name="cost_money">Kosten: €</string>
-    <string name="cost_free">Kosten: keine</string>
+    <string name="cost_free">Kostenlos</string>
     <string name="multiline_title">Mehrzeilige Titel zulassen</string>
     <string name="multiline_title_on">Eingabetaste drücken, um Zeilenumbrüche einzufügen</string>
     <string name="comment">Kommentar</string>
