--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -724,7 +724,7 @@
     <string name="button_learn_more">Saznaj više</string>
     <string name="sync_warning_google_tasks">S Google Tasks se ne sinkroniziraju se svi detalji zadataka.</string>
     <string name="delete_comment">komentar</string>
-    <string name="cost_free">Cijena: besplatno</string>
+    <string name="cost_free">Besplatno</string>
     <string name="sync_warning_microsoft">S Microsoft To Do se ne sinkroniziraju se svi detalji zadataka.</string>
     <string name="yesterday">Jučer</string>
     <string name="price_per_month_with_currency">%s/mjesec</string>
