--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -692,7 +692,7 @@
     <string name="swipe_to_snooze_time_description">Egy törölt értesítés annyi idő múlva lesz újra megjelenítve: %s</string>
     <string name="customize_drawer_summary">A menüelemek húzással történő átrendezése</string>
     <string name="show_edit_screen_without_unlock_summary">Gyorsbeállítások ikon engedélyezése a telefon feloldása nélkül</string>
-    <string name="cost_free">Ár: ingyenes</string>
+    <string name="cost_free">Ingyenes</string>
     <string name="cost_money">Ár: $</string>
     <string name="cost_more_money">Ár: $$$</string>
     <string name="multiline_title">Többsoros címek engedélyezése</string>
