--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -701,7 +701,7 @@
     <string name="banner_app_updated_description">Tasks が %s に更新されました。リリース ノートを表示しますか?</string>
     <string name="cost_money">料金: $</string>
     <string name="multiline_title_off">タスクを保存するには「完了」を押してください</string>
-    <string name="cost_free">料金: 無料</string>
+    <string name="cost_free">無料</string>
     <string name="continue_without_sync">同期せずに続ける</string>
     <string name="delete_tasks_warning">%sは削除されます。これは元に戻せません！</string>
     <string name="cost_more_money">料金: $$$</string>
