--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -696,7 +696,7 @@
     <string name="price_per_year_with_currency">%s/år</string>
     <string name="price_per_month_with_currency">%s/månad</string>
     <string name="yesterday">Igår</string>
-    <string name="cost_free">Pris: Gratis</string>
+    <string name="cost_free">Gratis</string>
     <string name="cost_money">Pris: $</string>
     <string name="cost_more_money">Pris: $$$</string>
     <string name="add_shortcut_to_home_screen">Lägg till genväg på hemskärm</string>
