--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -706,7 +706,7 @@
     <string name="sort_descending">இறங்கு</string>
     <string name="add_shortcut_to_home_screen">முகப்புத் திரையில் குறுக்குவழியைச் சேர்க்கவும்</string>
     <string name="add_widget_to_home_screen">முகப்புத் திரையில் விட்செட்டைச் சேர்க்கவும்</string>
-    <string name="cost_free">செலவு: இலவசம்</string>
+    <string name="cost_free">இலவசம்</string>
     <string name="button_learn_more">மேலும் அறிக</string>
     <string name="open_source">திறந்த மூல</string>
     <string name="google_play_subscribers">கூகிள் பிளே சந்தாதாரர்கள்</string>
