--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -688,7 +688,7 @@
     <string name="add_widget_to_home_screen">添加小部件到主屏幕</string>
     <string name="add_shortcut_to_home_screen">添加快捷方式到主屏幕</string>
     <string name="cost_more_money">费用：$$$</string>
-    <string name="cost_free">费用：无</string>
+    <string name="cost_free">免费</string>
     <string name="cost_money">费用：$</string>
     <string name="comment">注释</string>
     <string name="multiline_title">允许多行标题</string>
