--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -525,6 +525,7 @@ File %1$s contained %2$s.\n\n
   <string name="etesync_selection_description">End-to-end encrypted synchronization</string>
   <string name="decsync_selection_description">File-based synchronization</string>
   <string name="microsoft_selection_description">Synchronize with your personal Microsoft account</string>
+  <string name="microsoft_selection_description_googleplay">Synchronize with your work, school, or personal Microsoft account</string>
   <string name="davx5_selection_description">Synchronize your tasks with the DAVx⁵ app</string>
   <string name="show_advanced_settings">Show advanced settings</string>
   <string name="caldav_account_description">Requires an account with a CalDAV service provider or a self-hosted server. Find a service provider by visiting tasks.org/caldav</string>
@@ -723,7 +724,7 @@ File %1$s contained %2$s.\n\n
   <string name="sort_not_available">Not available for tags, filters, or places</string>
   <string name="add_shortcut_to_home_screen">Add shortcut to home screen</string>
   <string name="add_widget_to_home_screen">Add widget to home screen</string>
-  <string name="cost_free">Cost: Free</string>
+  <string name="cost_free">Free</string>
   <string name="cost_money">Cost: $</string>
   <string name="cost_more_money">Cost: $$$</string>
   <string name="multiline_title">Allow multiline titles</string>
