feat: Add per-list sorting option (#3073)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -598,6 +598,9 @@ File %1$s contained %2$s.\n\n
   <string name="donate_today">Donate today</string>
   <string name="donate_maybe_later">Maybe later</string>
   <string name="support_development_subscribe">Unlock additional features and support open source software</string>
+  <string name="p_per_list_sort">per_list_sort</string>
+  <string name="per_list_sort_title">Per-list sorting</string>
+  <string name="per_list_sort_summary">Remember sort and group settings for each list independently</string>
   <string name="sort_start_group">Start %s</string>
   <string name="sort_due_group">Due %s</string>
   <string name="sort_created_group">Created %s</string>
