--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -593,6 +593,8 @@ File %1$s contained %2$s.\n\n
   <string name="filter_eisenhower_box_2">Important and not urgent</string>
   <string name="filter_eisenhower_box_3">Not important and urgent</string>
   <string name="filter_eisenhower_box_4">Not important and not urgent</string>
+  <string name="banner_subscription_required_title">Subscription required</string>
+  <string name="banner_subscription_required_body">Pay whatever you want to unlock %s synchronization</string>
   <string name="enjoying_tasks">Enjoying Tasks?</string>
   <string name="donate_nag">Consider showing your support with a donation!</string>
   <string name="donate_today">Donate today</string>
