Onboarding and upsell changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -690,6 +690,8 @@ File %1$s contained %2$s.\n\n
   <string name="upgrade_desktop_access_description">Sync with third-party clients like Outlook and Apple Reminders</string>
   <string name="upgrade_open_source_description">Your subscription supports continued development</string>
   <string name="more_options">More options</string>
+  <string name="already_subscribed">Already a subscriber?</string>
+  <string name="upgrade_subscription_banner">Thanks for your support! Upgrade your subscription to enable Tasks.org Cloud Sync</string>
   <string name="markdown">Markdown</string>
   <string name="markdown_description">Enable Markdown in title and description</string>
   <string name="completion_sound">Play completion sound</string>
