--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -703,6 +703,10 @@ File %1$s contained %2$s.\n\n
   <string name="alarm_after_start">%s after start</string>
   <string name="alarm_before_due">%s before due</string>
   <string name="alarm_after_due">%s after due</string>
+  <string name="alarm_before">before</string>
+  <string name="alarm_after">after</string>
+  <string name="alarm_start">start</string>
+  <string name="alarm_due">due</string>
   <string name="snoozed_until">Snoozed until %s</string>
   <string name="custom_notification">Custom notification</string>
   <string name="caldav_server_unknown">Unknown</string>
