--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -670,6 +670,11 @@ File %1$s contained %2$s.\n\n
   <string name="app_password_delete_confirmation">Any app using this password will be signed out</string>
   <string name="app_password_save">Use these credentials to configure a third-party app. They grant complete access to your Tasks.org account, don\'t write them down or share them with anyone!</string>
   <string name="copied_to_clipboard">%s copied to clipboard</string>
+  <string name="email_to_task">Email to task</string>
+  <string name="email_to_task_address">Your email address</string>
+  <string name="email_to_task_calendar">Destination list</string>
+  <string name="regenerate_email_address">Regenerate address</string>
+  <string name="regenerate_email_address_confirmation">Your current email address will stop working</string>
   <string name="tasks_org_account">Tasks.org account</string>
   <string name="tasks_org_account_required">Tasks.org account required</string>
   <string name="account_not_included">Not included with \'Name your price\' subscriptions</string>
